# PrivStack-IO

./: .env.example  .gitignore  APP_CONTEXT.md  LICENSE  README.md  build.sh  run-server.sh
.github/: dependabot.yml
.github/workflows/: build-windows.yml  product-updates.yml  publish-nuget.yml
Wiki/: README.md  architecture-overview.md  crdt-system.md  cryptography.md  entity-model.md  ffi-reference.md  plugin-architecture.md  plugin-package-format.md  plugin-sdk.md  relay-deployment.md  storage-layer.md  sync-engine.md
assets/: AppIcon.icns
core/: Cargo.toml  clippy.toml  deny.toml  rustfmt.toml
core/.cargo/: config.toml
core/privstack-blobstore/: Cargo.toml
core/privstack-blobstore/src/: lib.rs
core/privstack-blobstore/tests/: blobstore_tests.rs
core/privstack-crdt/: Cargo.toml
core/privstack-crdt/benches/: crdt_bench.rs
core/privstack-crdt/src/: lib.rs  lww_register.rs  orset.rs  pn_counter.rs  rga.rs  vector_clock.rs
core/privstack-crdt/tests/: adversarial_tests.rs  crdt_properties.rs  integration_tests.rs  lww_register_tests.rs  n_peer_convergence_tests.rs  orset_tests.rs  pn_counter_tests.rs  rga_tests.rs  vector_clock_tests.rs
core/privstack-crypto/: Cargo.toml
core/privstack-datasets/: Cargo.toml
core/privstack-datasets/src/: error.rs  lib.rs  schema.rs  types.rs
core/privstack-datasets/src/store/: crud.rs  helpers.rs  mod.rs  mutations.rs  preprocessor.rs  query.rs  relations.rs  row_pages.rs  saved_queries.rs  views.rs
core/privstack-datasets/tests/: store_tests.rs
core/privstack-db/: Cargo.toml
core/privstack-db/src/: error.rs  functions.rs  lib.rs
core/privstack-db/tests/: db_tests.rs
core/privstack-ffi/: Cargo.toml
core/privstack-license/: Cargo.toml
core/privstack-model/: Cargo.toml
core/privstack-model/src/: entity.rs  handler.rs  lib.rs  schema.rs
core/privstack-model/tests/: entity_tests.rs  handler_tests.rs  schema_tests.rs
core/privstack-plugin-host/: Cargo.toml
core/privstack-plugin-sdk/: Cargo.toml
core/privstack-ppk/: Cargo.toml
core/privstack-storage/: Cargo.toml
core/privstack-sync/: Cargo.toml
core/privstack-types/: Cargo.toml
core/privstack-types/src/: event.rs  ids.rs  lib.rs  timestamp.rs
core/privstack-types/tests/: event_tests.rs  ids_tests.rs  timestamp_tests.rs
core/privstack-vault/: Cargo.toml
core/privstack-vault/src/: lib.rs  recovery.rs
core/privstack-vault/tests/: recovery_extended_tests.rs  vault_integration_tests.rs  vault_tests.rs
desktop/: .env.example  Directory.Build.props  PrivStack.sln
desktop/PrivStack.Desktop/: AiPersona.cs  App.axaml  App.axaml.cs  GlobalUsings.cs  Package.appxmanifest  PrivStack.Desktop.csproj  Program.cs  ViewLocator.cs  app.manifest
desktop/PrivStack.Desktop.Tests/: GlobalUsings.cs  PrivStack.Desktop.Tests.csproj
desktop/PrivStack.Sdk/: DisposableExtensions.cs  EntitySchema.cs  HeadlessPluginBase.cs  HostServices.cs  IAppPlugin.cs  ICapabilityBroker.cs  ICommandProvider.cs  IConnectionService.cs  IFocusModeService.cs  IFontScaleService.cs  IInfoPanelService.cs  INavigationService.cs  IPluginHost.cs  IPluginLogger.cs  IPluginSettings.cs  IPrivStackSdk.cs  IResponsiveLayoutService.cs  ISdkDialogService.cs  ISpellCheckService.cs  IThesaurusService.cs  PluginBase.cs  PluginMetadata.cs  PluginTypes.cs  PrivStack.Sdk.csproj  SdkMessage.cs  SdkResponse.cs  ViewModelBase.cs
desktop/PrivStack.Server/: AuditLogger.cs  ConsoleUi.cs  EnterprisePolicy.cs  HeadlessConfig.cs  HeadlessHost.cs  HeadlessOptions.cs  HeadlessPluginRegistry.cs  HeadlessSetupWizard.cs  HeadlessStubs.cs  KeyringServices.cs  PolicyEnforcer.cs  PrivStack.Server.csproj  Program.cs  ServerServiceRegistration.cs
desktop/PrivStack.Services/: AiSuggestionServiceImpl.cs  AppSettings.cs  BacklinkService.cs  CloudPathResolver.cs  CloudSyncService.cs  CoreServiceRegistration.cs  DataPaths.cs  DatasetService.Mutations.cs  DatasetService.SqlV2.cs  DatasetService.cs  EntityMetadataService.cs  EntityTypeMap.cs  FocusModeService.cs  InfoPanelService.cs  LicenseExpirationService.cs  LinkProviderCacheService.cs  Log.cs  MasterPasswordCache.cs  NativeMessagingRegistrar.cs  NetworkPathDetector.cs  OAuthLoginService.cs  PlatformDetector.cs  PluginInstallService.cs  PrivStack.Services.csproj  PrivStackApiClient.cs  ReminderSchedulerService.cs  SeedDataService.cs  SensitiveLockService.cs  ServiceProviderAccessor.cs  StringHelpers.cs  SubscriptionValidationService.cs  SyncIngestionService.cs  SyncOutboundService.cs  ViewStatePrefetchService.cs  WorkspaceDataMigration.cs  WorkspaceMigrationProgress.cs  (+1 more)
relay/: Cargo.toml  README.md
relay/src/: lib.rs  main.rs
relay/tests/: identity_api_tests.rs
(+682 files in other folders)
