[package]
name = "privstack-blobstore"
description = "Generic unencrypted namespace-scoped blob storage for PrivStack"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
privstack-crypto.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono = "0.4"
duckdb.workspace = true
sha2 = "0.10"

[dev-dependencies]
tempfile.workspace = true
duckdb.workspace = true
serde_json.workspace = true
sha2 = "0.10"
