[package]
name = "privstack-blobstore"
description = "Namespace-scoped blob storage for PrivStack (SQLite-backed)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
privstack-db.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono = "0.4"
sha2 = "0.10"

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true
sha2 = "0.10"
