[package]
name = "privstack-datasets"
description = "SQLite-backed tabular dataset storage for PrivStack"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
csv = "1.3"
privstack-db.workspace = true
regex-lite = "0.1"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
pretty_assertions.workspace = true
