[package]
name = "privstack-model"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core entity model types for PrivStack — Entity, EntitySchema, MergeStrategy"
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
