[package]
name = "privstack-vault"
description = "Generic encrypted vault with blob storage for PrivStack"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
privstack-crypto.workspace = true
privstack-db.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono = "0.4"
sha2 = "0.10"

[dev-dependencies]
tempfile.workspace = true
